--- a/UnityInventory/Assets/Inventory/Editor/com.danielrusnac.itemmanagement.editor.asmdef
+++ b/UnityInventory/Assets/Inventory/Editor/com.danielrusnac.itemmanagement.editor.asmdef
@@ -1,8 +1,12 @@
 {
-    "name": "com.danielrusnac.inventorysystem",
-    "rootNamespace": "InventorySystem",
-    "references": [],
-    "includePlatforms": [],
+    "name": "com.danielrusnac.inventorysystem.editor",
+    "rootNamespace": "ItemManagement",
+    "references": [
+        "GUID:16e59b9180d9dab49bb8ba5b4f259ee1"
+    ],
+    "includePlatforms": [
+        "Editor"
+    ],
     "excludePlatforms": [],
     "allowUnsafeCode": false,
     "overrideReferences": false,
