--- a/UnityInventory/Assets/packages.config
+++ b/UnityInventory/Assets/packages.config
@@ -1,2 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<packages />
+<packages>
+  <package id="Castle.Core" version="5.0.0" />
+  <package id="NSubstitute" version="4.4.0" />
+  <package id="System.Diagnostics.EventLog" version="4.7.0" />
+  <package id="System.Threading.Tasks.Extensions" version="4.3.0" />
+</packages>
