--- a/UnityInventory/Assets/ItemManagement/Tests/Editor/com.danielrusnac.itemmanagement.tests.editor.asmdef
+++ b/UnityInventory/Assets/ItemManagement/Tests/Editor/com.danielrusnac.itemmanagement.tests.editor.asmdef
@@ -14,7 +14,8 @@
     "overrideReferences": true,
     "precompiledReferences": [
         "nunit.framework.dll",
-        "NSubstitute.dll"
+        "NSubstitute.dll",
+        "System.Threading.Tasks.Extensions.dll"
     ],
     "autoReferenced": false,
     "defineConstraints": [
