Update assembly settings

--- a/UnityInventory/Packages/com.danielrusnac.itemmanagement/package.json
+++ b/UnityInventory/Packages/com.danielrusnac.itemmanagement/package.json
@@ -10,5 +10,6 @@
     "name": "Daniel Rusnac",
     "email": "daniel.rusnac.personal@gmail.com",
     "url": "https://github.com/danielrusnac"
-  }
+  },
+  "unity": "2021.1"
 }
