Test UI Toolkit

--- a/UnityInventory/Packages/com.danielrusnac.itemmanagement/package.json
+++ b/UnityInventory/Packages/com.danielrusnac.itemmanagement/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "com.danielrusnac.itemmanagement",
+  "name": "com.danielrusnac.as",
   "version": "3.0.0",
   "displayName": "Item Management",
   "description": "A simple system to manage items and inventories.",
