--- a/UnityInventory/Packages/com.danielrusnac.itemmanagement.ui/package.json
+++ b/UnityInventory/Packages/com.danielrusnac.itemmanagement.ui/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "com.danielrusnac.itemmanagement.ui",
+  "name": "com.danielrusnac.items.ui",
   "version": "0.1.0",
-  "displayName": "Item Management UI",
-  "description": "UI for Item Management package.",
+  "displayName": "Items UI",
+  "description": "UI for items and inventories.",
   "author": {
     "name": "Daniel Rusnac",
     "email": "daniel.rusnac.personal@gmail.com",
