Update organization name

--- a/UnityInventory/Packages/com.danielrusnac.items/Runtime/com.foggywoods.inventories.asmdef
+++ b/UnityInventory/Packages/com.danielrusnac.items/Runtime/com.foggywoods.inventories.asmdef
@@ -1,6 +1,6 @@
 {
-    "name": "com.danielrusnac.items",
-    "rootNamespace": "Items",
+    "name": "FoggyWoods.Inventories",
+    "rootNamespace": "FoggyWoods.Inventories",
     "references": [],
     "includePlatforms": [],
     "excludePlatforms": [],
