--- a/UnityInventory/Packages/com.foggywoods.inventories.ui/Runtime/com.foggywoods.inventories.ui.asmdef
+++ b/UnityInventory/Packages/com.foggywoods.inventories.ui/Runtime/com.foggywoods.inventories.ui.asmdef
@@ -2,7 +2,8 @@
     "name": "FoggyWoods.Inventories.UI",
     "rootNamespace": "FoggyWoods.Inventories.UI",
     "references": [
-        "FoggyWoods.Inventories"
+        "FoggyWoods.Inventories",
+        "Unity.TextMeshPro"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
